--- a/BAITAP/style.css
+++ b/BAITAP/style.css
@@ -4,11 +4,6 @@
 }
 @media only screen and (max-width: 750) {   
 }
-
-
-
-   
-  
   *{
     font-family: Quicksand, Arial, 'Helvetica Neue', Helvetica, sans-serif;}
 .header{
@@ -27,7 +22,9 @@
 .v:hover{
     color: #ffbb00;
     transition: 2s;
-    transform: translateX(2s);
+    position:absolute;
+
+    
 }
 .item {
     padding: 0px 10px;
@@ -46,14 +43,13 @@
     transition: color 0.5s ;
     z-index: 1;
     text-align: center;
-    color: chocolate;
+    color: rgb(195, 9, 241);
 }
 .item a span{
     width: 0%;
     height: 100%;
     position: absolute;
-    top: 0;
-    left: 0;
+    text-align: center;
     background: #ffbb00;
     z-index: -1;
     transition: 0.5s;
